turtleart.lessons.turtleart.Main.CircleSquare.scala.error
Source:9: error: not found: value Pi
		avance(2*Pi/3.6)
                         ^